--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -414,11 +414,11 @@
                 <div class="col-lg-8" data-aos="zoom-in">
                     <div class="pricing-card text-center">
                         <h2 class="fw-bold mb-3">Simple, Flat-Rate Pricing</h2>
-                        <p class="text-muted mb-4">Everything you need to automate your inbound calls.</p>
+                        <p class="text-white mb-4">Everything you need to automate your inbound calls.</p>
 
                         <div class="d-flex justify-content-center align-items-baseline mb-4">
                             <span class="display-3 fw-bold text-white">$147</span>
-                            <span class="text-muted ms-2">/month</span>
+                            <span class="text-white ms-2">/month</span>
                         </div>
 
                         <div class="row justify-content-center text-start mb-5">
@@ -599,7 +599,7 @@
                 });
 
                 if (response.ok) {
-                    status.innerHTML = '<div class="alert alert-success mt-3">Success! 🚀 We\'ve received your request. We\'ll be in touch shortly to schedule your live demo.</div>';
+                    status.innerHTML = '<div class="alert alert-success mt-3">Success! We\'ve received your request. We\'ll be in touch shortly to schedule your live demo.</div>';
                     status.style.display = "block";
                     form.reset();
                 } else {
